actualizacion de colores

--- a/src/components/chart/chart.css
+++ b/src/components/chart/chart.css
@@ -10,3 +10,19 @@
 .chartTitle {
   margin-bottom: 2rem;
 }
+
+.tooltip {
+  border-radius: 0.25rem;
+  background: #fff;
+  padding: 1rem;
+  text-align: center;
+}
+
+.tooltip .label {
+  color: #000;
+}
+
+.tooltip .payload {
+  color: #5550bd;
+  
+}
