--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -118,7 +118,9 @@
     /* background: linear-gradient(to right, #0575e6, #021b79); */
     /* background: linear-gradient(to right, #000428, #004e92); */
 
-  background: linear-gradient(to right, #6190e8, #a7bfe8);
+  /* background: linear-gradient(to right, #6190e8, #a7bfe8); */
+  background: linear-gradient(to right, #4776e6, #8e54e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   cursor: pointer;
   border: none;
   padding: 1rem;
