--- a/src/pages/reports/reportWeeklySalesByMonth/reportWeeklySalesByMonth.css
+++ b/src/pages/reports/reportWeeklySalesByMonth/reportWeeklySalesByMonth.css
@@ -1,20 +1,61 @@
-.datePicker {
+.reportWeeklySalesByMonth {
+  flex: 4;
+  height: calc(100vh - 5rem);
+}
+
+.reportWeeklySalesByMonth__container {
   width: 100%;
+}
+
+.reportWeeklySalesByMonth__selectorDeFecha {
+  position: relative;
+}
+
+.reportWeeklySalesByMonth__title {
+  font-size: 1.8rem;
+  padding: .5rem 1.5rem;
+}
+
+.datePicker {
+  cursor: pointer;
+  width: 97%;
   text-align: center;
   padding: 1rem;
   font-size: 1.8rem;
   margin: 0 1.5rem;
+  background-color: hsla(243, 45%, 53%, 0.14);
 }
 
-.react-datepicker { font-size: 2em !important }
-.react-datepicker__header { padding-top: 0.8em !important}
-.react-datepicker__month { margin: 0.4em 1em !important}
+.calendario {
+  font-size: 3rem;
+  position: absolute;
+  top: 3.7rem;
+  left: 3rem;
+  cursor: pointer;
+}
+
+.react-datepicker { 
+  font-size: 2em !important 
+}
+
+.react-datepicker__header { 
+  padding-top: 0.8em !important
+}
+
+.react-datepicker__month { 
+  margin: 0.4em 1em !important
+}
+
 .react-datepicker__day-name, .react-datepicker__day {
   width: 1.9em !important; 
   line-height: 1.9em !important;
   margin: 0.166em !important;
 }
-.react-datepicker__current-month { font-size: 1em !important }
+
+.react-datepicker__current-month { 
+  font-size: 1em !important 
+}
+
 /* .react-datepicker__navigation {
   top: 1em !important;
   line-height: 1.7em !important;
@@ -29,12 +70,51 @@
 } */
 
 
-.react-datepicker__time-container { width: 6em !important}
-.react-datepicker-time__header { font-size: 1em !important }
-.react-datepicker-time__header--time { padding-left: 0px !important; padding-right: 0px !important }
+.react-datepicker__time-container { 
+  width: 6em !important
+}
+
+.react-datepicker-time__header { 
+  font-size: 1em !important 
+}
+
+.react-datepicker-time__header--time { 
+  padding-left: 0px !important; 
+  padding-right: 0px !important 
+}
+
 .react-datepicker__time-box { 
   margin-left: 0px !important; 
   margin-right: 0px !important; 
   width:100% !important
 }
-.react-datepicker__time-list { padding: 0 !important; }
+
+.react-datepicker__time-list { 
+  padding: 0 !important; 
+}
+
+/* 1290px */
+@media (max-width:80.625em) {
+ .reportWeeklySalesByMonth {
+    width: 60rem;
+ } 
+ 
+}
+
+/* 680px */
+@media (max-width:42.5em) {
+  .reportWeeklySalesByMonth {
+    width: 50rem;
+  } 
+ }
+
+ /* 460px */
+ @media (max-width:28.75em) {
+  .reportWeeklySalesByMonth__container {
+    margin: .5rem 7rem;
+  }
+
+  .datePicker {
+    width: 82%;
+  }
+ }
