--- a/src/pages/catalogs/create/newProduct/newProduct.css
+++ b/src/pages/catalogs/create/newProduct/newProduct.css
@@ -47,11 +47,11 @@
   /* padding: 1.5rem; */
   border: none;
   border-radius: 1rem;
-  background-color: darkblue;
+  /* background-color: darkblue; */
   color: white;
-  font-weight: 600;
+  /* font-weight: 600; */
   cursor: pointer;
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
 
   background: #0164ce;
   border: 1px solid; 
