--- a/src/pages/catalogs/edit/client/client.css
+++ b/src/pages/catalogs/edit/client/client.css
@@ -11,17 +11,25 @@
 
 .clientTitle {
   font-size: 2.8rem;
+  color: #343a40;
 }
 
 .clientAddButton {
   width: 8rem;
   border: none;
   padding: .5rem;
-  background-color: teal;
   border-radius: .5rem;
   cursor: pointer;
-  color: white;
-  font-size: 1.6rem;
+  /* background-color: teal; */
+  /* color: white; */
+  /* font-size: 1.6rem; */
+  color: #111;
+  /* font-size: 1.4rem; */
+
+  background: #ffd60a; 
+  border: 1px solid;
+  border-color:  #838d12;
+  font-size: 1.4rem;
 }
 
 .clientContainer {
@@ -38,7 +46,7 @@
 
 .clientUpdate {
   flex: 2;
-  padding: 2rem;
+  padding: 2rem 0rem;
   -webkit-box-shadow: 0rem 0rem 1.5rem -1rem rgba(0, 0, 0, 0.75);
   box-shadow: 0rem 0rem 1.5rem -1rem rgba(0, 0, 0, 0.75);
   margin-left: 2rem;
@@ -65,6 +73,7 @@
 .clientShowClientname {
   font-size: 1.8rem;
   font-weight: 600;
+  color: #343a40;
 }
 
 .clientShowClientTitle {
@@ -106,6 +115,7 @@
   font-size: 2.4rem;
   font-weight: 600;
   padding-left: 1rem;
+  color: #343a40;
 }
 
 .clientUpdateForm{
@@ -121,7 +131,7 @@
 }
 
 .clientUpdateItem>label{
-    margin-bottom: .5rem;
+    margin-bottom: 0rem;
     font-size: 1.4rem;
 }
 
@@ -173,17 +183,26 @@
 }
 
 .clientUpdateButton{
+  /* width: 24rem; */
+  width: 18rem;
   border-radius: .5rem;
   border: none;
-  padding: 1.5rem;
+  /* padding: 1.5rem; */
+  padding: .7rem 1rem;
   cursor: pointer;
-  background-color: darkblue;
+  /* background-color: darkblue; */
   color: white;
-  font-size: 1.6rem;
-  font-weight: 600;
-  width: 24rem;
-  color: white;
+  /* font-size: 1.6rem; */
   letter-spacing: .1rem;
+  /* font-weight: 600; */
+  
+  background: #0164ce;
+  border: 1px solid; 
+  /* border-color: #225184 #639bd6 #023368; */
+  border-color: hsla(211, 96%, 21%, 0.933) ;
+  /* color: #111; */
+  font-size: 1.4rem;
+  font-weight: 400;
 }
 
 .clientUpdateButton:disabled,
@@ -191,6 +210,10 @@
   background-color: gray;
 }
 
-.clientTitle {
-  font-size: 2.8rem;
+/* 480px */
+@media (max-width:30em) {
+  .client{ 
+    transform: rotate(90deg);
+  }
+
 }
