--- a/src/pages/catalogs/create/newClient/newClient.css
+++ b/src/pages/catalogs/create/newClient/newClient.css
@@ -4,6 +4,7 @@
 
 .newClientTitle {
   font-size: 2rem;
+  color: #343a40;
 }
 
 .newClientForm {
@@ -15,7 +16,7 @@
 }
 
 .newClientItem {
-  width: 40rem;
+  width: 25rem;
   display: flex;
   flex-direction: column;
   margin-right: 2rem;
@@ -39,16 +40,26 @@
 }
 
 .newClientButton{
-  width: 20rem;
+  /* width: 20rem; */
+  width: 18rem;
   margin-top: 3rem;
   padding: .7rem 1rem;
   border: none;
   border-radius: 1rem;
-  background-color: darkblue;
+  /* background-color: darkblue; */
   color: white;
-  font-weight: 600;
+  /* font-weight: 600; */
   cursor: pointer;
-  font-size: 1.6rem;
+  /* font-size: 1.6rem; */
+
+  background: #0164ce;
+  border: 1px solid; 
+  /* border-color: #225184 #639bd6 #023368; */
+  border-color: hsla(211, 96%, 21%, 0.933) ;
+
+  /* color: #111; */
+  font-size: 1.4rem;
+  font-weight: 400;
 }
 
 .newClientButton:disabled,
