--- a/src/pages/placeOrder/newOrUpdateOrder/newOrUpdateOrder.css
+++ b/src/pages/placeOrder/newOrUpdateOrder/newOrUpdateOrder.css
@@ -114,12 +114,12 @@ h2 {
 }
 
 .linkActualizarPedido__button {
-  border: none;
+  /* border: none; */
   border-radius: 10rem;
   padding: 1rem 1rem;
-  background-color: teal;
+  /* background-color: teal; */
   
-  color: white;
+  /* color: white; */
   cursor: pointer;
   margin-bottom: 1.2rem;
   font-size: 1.4rem;  
@@ -137,6 +137,7 @@ h2 {
   border-color: #989eaa #99b4e5 #4d6185;
   color: #111;
   
+  width: 25rem;
 }
 
 
