--- a/src/pages/placeOrder/newOrUpdateOrder/newOrUpdateOrder.css
+++ b/src/pages/placeOrder/newOrUpdateOrder/newOrUpdateOrder.css
@@ -2,6 +2,22 @@
   flex: 4;
 }
 
+.regresarAPaginaAnterior {
+  width: 100%;
+  height: 4rem;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.4rem;
+  display: none;
+}
+
+.arrowLeftGoBack {
+  margin-left: 2rem;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
 h2 {
   font-size: 1rem;
   margin-bottom: 1.6rem;
@@ -12,6 +28,11 @@ h2 {
   margin-bottom: 1.5rem;
   font-size: 1.6rem;
   padding: 1rem 2.2rem;
+}
+
+.editarCliente {
+  display: flex;
+  gap: 2rem;
 }
 
 .businessInfo__businessName {
