--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -188,11 +188,11 @@
   font-size: 1.6rem;
 }
 
-.logoutButton {
+.menuGeneralButton {
   border-radius: .5rem;
   border: none;
   padding: .5rem;
-  margin: .5rem;
+  /* margin: .5rem; */
   cursor: pointer;
   /* background-color: darkblue; */
   color: black;
@@ -201,18 +201,6 @@
   text-decoration: none;
 }
 
-.crearPedidoButton {
-  border-radius: .5rem;
-  border: none;
-  padding: .5rem;
-  margin: .5rem;
-  cursor: pointer;
-  /* background-color: darkblue; */
-  color: black;
-  font-size: 1.2rem;
-  /* font-weight: 600; */
-  text-decoration: none;
-}
 
 .liga__flex {
   display: flex;
@@ -224,7 +212,7 @@
   color: #f0c14b;
 }
 
-.iconos__signOut {
+.iconos__general {
   font-size: 2.2rem;
 }
 
