puse crear Cliente en celular

--- a/src/pages/catalogs/create/newClient/newClient.css
+++ b/src/pages/catalogs/create/newClient/newClient.css
@@ -23,6 +23,15 @@
   margin-bottom: 2rem;
 }
 
+.newClientItemCheckbox {
+  width: 7rem;
+  display: flex;
+  flex-direction: column;
+  /* margin-right: 2rem;
+  margin-bottom: 2rem; */
+}
+
+
 .newClientItem > label {
   color: rgb(151, 150, 150);
   font-size: 1.4rem;
@@ -30,14 +39,24 @@
   margin-bottom: .25rem;
 }
 
-.newClientItem > input {
+.inputGeneralDataType {
   width: 40rem;
+}
+
+.inputCheckboxDataType {
+  width: 2rem;
+}
+
+.inputGeneralDataType,
+.inputCheckboxDataType {
   height: 2.8rem;
   padding: 1rem 1rem;
   border: .1rem solid gray;
   border-radius: .5rem;
   font-size: 1.4rem;
 }
+
+
 
 .newClientButton{
   /* width: 20rem; */
@@ -136,5 +155,9 @@
     padding-bottom: 1rem;
     padding-left: 2rem; */
     padding-right: 0rem;
+  }
+
+  .newClientItemCheckbox {
+    width: 3rem;
   }
 }
