--- a/src/pages/catalogs/create/newClient/newClient.css
+++ b/src/pages/catalogs/create/newClient/newClient.css
@@ -39,6 +39,13 @@
   margin-bottom: .25rem;
 }
 
+.labelCheckbox {
+  color: rgb(151, 150, 150);
+  font-size: 1.4rem;
+  font-weight: 600;
+  width: 12rem;
+}
+
 .inputGeneralDataType {
   width: 40rem;
 }
@@ -159,5 +166,9 @@
 
   .newClientItemCheckbox {
     width: 3rem;
+  }
+
+  .labelCheckbox {
+    width: 2rem;
   }
 }
